fix(style): LaTex/KaTeX overflow (#1027)
* LaTex/KaTeX overflow fix

* prettier

* Add !important modifier

* Added overflow-x override

* Refactor without !important

* Refactor scss notation

* Formatting scss

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -513,3 +513,15 @@ ol.overflow {
     padding-left: 1rem;
   }
 }
+
+.katex-display {
+  overflow-x: auto;
+  overflow-y: visible;
+
+  & > .katex .katex-html {
+    .base,
+    .strut {
+      display: inline;
+    }
+  }
+}
